# MacMocker

./: CHANGELOG.md  JAMF_DEPLOYMENT.md  LICENCE  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  base_test.py  build_pkg.sh  config_loader.py  excel_test.py  full_tests.yaml  install.sh  main.py  project_structure.txt  pyproject.toml  reporter.py  tcc_profile.mobileconfig  test.yml  test_runner.py
config/: example_config.yaml  full_tests.yaml  quick_tests.yaml
core/: config_loader.py  reporter.py  test_runner.py
deployment/: JAMF_DEPLOYMENT.md  build_pkg.sh  install.sh  tcc_profile.mobileconfig
mnt/user-data/outputs/macmocker/tests/: __init__.py
tests/: application_launch_test.py  base_test.py  network_test.py  outlook_test.py  template_test.py  word_test.py
tests/applications/: excel_test.py  outlook_test.py  word_test.py
tests/network/: network_test.py
